<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_recipe"
        android:title="@string/recipes" />

    <item
        android:id="@+id/navigation_grocery"
        android:icon="@drawable/ic_grocery"
        android:title="@string/grocery_list" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_blog"
        android:title="@string/blog" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>