<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mealmate.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />

        <action
            android:id="@+id/action_navigation_home_to_create_recipe"
            app:destination="@id/navigation_create_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.mealmate.ui.recipes.RecipeListFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipe_list">

        <action
            android:id="@+id/action_recipes_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />

        <action
            android:id="@+id/action_navigation_recipes_to_create_recipe"
            app:destination="@id/navigation_create_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_recipe"
        android:name="com.example.mealmate.ui.recipes.CreateRecipeFragment"
        android:label="@string/create_recipe"
        tools:layout="@layout/fragment_create_recipe" />

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.mealmate.ui.recipes.RecipeDetailFragment"
        android:label="@string/recipe_details"
        tools:layout="@layout/fragment_recipe_detail">

        <argument
            android:name="recipeId"
            app:argType="integer" />

        <action
            android:id="@+id/action_recipe_detail_to_edit_recipe"
            app:destination="@id/navigation_edit_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_recipe"
        android:name="com.example.mealmate.ui.recipes.EditRecipeFragment"
        android:label="@string/edit_recipe"
        tools:layout="@layout/fragment_create_recipe">

        <argument
            android:name="recipeId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_grocery"
        android:name="com.example.mealmate.ui.grocerylist.GroceryListFragment"
        android:label="@string/grocery_list"
        tools:layout="@layout/fragment_grocery_list" />

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.mealmate.ui.blog.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/fragment_blog">

        <action
            android:id="@+id/action_blog_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.mealmate.ui.reminder.ReminderFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mealmate.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>